--- a/index.html
+++ b/index.html
@@ -23,10 +23,20 @@
           <li><div class="nav-link px-2 text-white nav-button" id="business-plan">Affärsplan</div></li>
           <li><div class="nav-link px-2 text-white nav-button" id="project-idea">Projektidé</div></li>
           <li><div class="nav-link px-2 text-white nav-button" id="contact">Kontakt</div></li>
-          <li><a href="app.html" class="nav-link px-2 text-white nav-button" id="app">App</a></li>
+          <li><a href="app.html" target="_blank" class="nav-link px-2 text-white nav-button" id="app">App</a></li>
         </ul>
       </div>
     </div>
+<!--     <div>
+      <div>
+          <h1 id="header-title">Cointax</h1>
+          <div class="nav-button" id="home">Hem</div>
+          <div class="nav-button" id="business-plan">Affärsplan</div>
+          <div class="nav-button" id="project-idea">Projektidé</div>
+          <div class="nav-button" id="contact">Kontakt</div>
+          <div><a href="app.html" target="_blank" class="nav-button" id="app">App</a></div>
+      </div>
+    </div> -->
   </header>
 
   <main>
@@ -34,7 +44,7 @@
 
   <footer>
     <div>
-        &copy; 2022 Copyright - Cointax
+        &copy; 2022 Copyright - Cointax by Johannes Jakobsson
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
