--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
   <header class="p-3 text-white header">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-          <h1 id="header-title">Cointax</h1>
-        </a>
+        <h1 id="header-title">Cointax</h1>
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><div class="nav-link px-2 text-white nav-button" id="home">Hem</div></li>
           <li><div class="nav-link px-2 text-white nav-button" id="business-plan">Affärsplan</div></li>
@@ -27,16 +25,6 @@
         </ul>
       </div>
     </div>
-<!--     <div>
-      <div>
-          <h1 id="header-title">Cointax</h1>
-          <div class="nav-button" id="home">Hem</div>
-          <div class="nav-button" id="business-plan">Affärsplan</div>
-          <div class="nav-button" id="project-idea">Projektidé</div>
-          <div class="nav-button" id="contact">Kontakt</div>
-          <div><a href="app.html" target="_blank" class="nav-button" id="app">App</a></div>
-      </div>
-    </div> -->
   </header>
 
   <main>
@@ -44,7 +32,7 @@
 
   <footer>
     <div>
-        &copy; 2022 Copyright - Cointax by Johannes Jakobsson
+        &copy; 2022 - Cointax by Johannes Jakobsson
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
