--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <header class="p-3 text-white header">
     <div class="container">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start my-navbar">
         <h1 id="header-title">Cointax</h1>
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><div class="nav-link px-2 text-white nav-button" id="home">Hem</div></li>
@@ -32,7 +32,7 @@
 
   <footer>
     <div>
-        &copy; 2022 - Cointax by Johannes Jakobsson
+        &copy; 2022 - Cointax by Jakobsson
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
