--- a/app.html
+++ b/app.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="./src/app/main.jsx"></script>
+    <script type="module" src="./src/app/App.jsx"></script>
 </body>
 </html>
