--- a/app.html
+++ b/app.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/app/app.css">
     <script src="https://kit.fontawesome.com/6bbff5247a.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="./Cointax.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <title>App</title>
+    <title>Cointax</title>
 </head>
 <body>
     <div id="root"></div>
